--- a/css/styles.css
+++ b/css/styles.css
@@ -217,6 +217,7 @@ a{
 
 .top-grade{
     text-align: center;
+    padding-bottom: 4rem;
 }
 .top-grade .top-grade-container{
     margin: 0 auto;
@@ -278,3 +279,161 @@ a{
 
 /* ==== footer ==== */
 /* ================ */
+
+footer{
+    background-color: black;
+    color: white;
+}
+footer .footer-container{
+    padding: 4rem 0;
+    padding-bottom: 1.5rem;
+    width: 90%;
+    margin: 0 auto;
+}
+footer .footer-form{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    align-items: center;
+}
+footer .footer-form section:has(ul) ul{
+    gap: 1rem 5rem;
+    display: flex;
+}
+footer .footer-form section:has(ul) ul li{
+    color: #232325;
+}
+footer .footer-form section:has(ul) ul li i{
+    color: #c6a177;
+    font-size: 1.5rem;
+}
+footer .footer-form section:has(ul) ul li span{
+    text-transform: uppercase;
+    color: white;
+    font-size: 0.83rem;
+}
+footer .footer-form section:has(form){
+    justify-self: flex-end;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #232325;
+    padding-bottom: 0.75rem;
+    gap: 0 1rem;
+}
+footer .footer-form section:has(form) input{
+    border: none;
+    background-color: transparent;
+    padding: 0.5rem;
+    color: #232325;
+}
+footer .footer-form section:has(form) input:focus{
+    outline: none;
+}
+footer .footer-form section:has(form) a{
+    color: white;
+    font-size: 0.83rem;
+}
+footer .footer-form section:has(form) a span{
+    text-transform: uppercase;
+}
+footer .footer-info{
+    padding-top: 4rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+footer .footer-info .logo-image{
+    margin-bottom: 0.75rem;
+}
+footer .footer-info .logo-image img{
+    width: 5rem;
+    height: 5rem;
+}
+footer .footer-info p{
+    line-height: 1.6;
+}
+footer .footer-info section:has(ul){
+    align-self: flex-end;
+    justify-self: flex-end;
+}
+footer .footer-info section:has(ul) ul{
+    display: flex;
+    gap: 0.25rem 0.25rem;
+}
+footer .footer-info section:has(ul) ul li{
+    border: 1px solid #232325;
+    padding: 0.3rem;
+    border-radius: 5px;
+}
+footer .footer-info section:has(ul) ul li a{
+    color: #6e6d6b;
+}
+
+/* ==== footer-links ==== */
+/* ====================== */
+
+.footer-links{
+    border-top: 1px solid #232325;
+    background-color: black;
+}
+.footer-links .footer-links-container{
+    padding: 2rem 0;
+    padding-bottom: 5rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 90%;
+    margin: 0 auto;
+}
+.footer-links .footer-links-container ul:nth-child(1){
+    display: flex;
+    justify-content: space-between;
+}
+.footer-links .footer-links-container ul:nth-child(2){
+    justify-self: flex-end;
+}
+.footer-links .footer-links-container ul li a{
+    color: white;
+    text-transform: uppercase;
+    font-size: 0.83rem;
+}
+@media screen and (max-width:992px){
+    footer .footer-form section:has(ul) ul{
+        flex-direction: column;
+    }
+    footer .footer-info{
+        grid-template-columns: 2fr 1fr;
+    }
+    .footer-links .footer-links-container{
+        grid-template-columns: 3fr 1fr;
+    }
+}
+@media screen and (max-width:640px){
+    footer .footer-form{
+        grid-template-columns: 1fr;
+        gap: 2rem 0;
+    }
+    footer .footer-form section:has(form){
+        justify-self: flex-start;
+    }
+    footer .footer-info{
+        gap: 2rem 0;
+        grid-template-columns: 1fr;
+    }
+    .footer-links .footer-links-container ul:nth-child(1){
+        display: grid;
+        gap: 0.75rem 0;
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+@media screen and (max-width:480px){
+    .footer-links .footer-links-container ul:nth-child(1){
+        justify-content: space-between;
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media screen and (max-width:360px){
+    footer .footer-form section:has(form){
+        width: 90%;
+    }
+    footer .footer-form section:has(form) form{
+        width: 55%;
+    }
+}
