--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,7 @@ a{
     border-radius: 100% / 125% 125% 80% 80%;
 }
 .aboutUs .aboutUs-container .aboutUs-text p{
-    color: #ccc8c5;
+    color: #6e6d6b;
     line-height: 1.8;
     font-size: 0.87rem;
 }
